--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is updated as of now.
+Noah - I think we should have branches for each architecture, so we don't mess up each others code. We can merge them back into master.
